--- a/debian/control
+++ b/debian/control
@@ -2,6 +2,7 @@ Source: libkrunfw
 Section: libs
 Priority: optional
 Maintainer: Andreas Schröder <andreas@kernelpanik.net>
+Standards-Version: 4.1.4
 Build-Depends:
  debhelper-compat (= 13),
  python3-pyelftools,
