d/control: split into lib and -dev

--- a/debian/control
+++ b/debian/control
@@ -40,20 +40,20 @@ Description: libkrunfw -- runtime
  inject those mappings into the guest without any kind of additional work nor
  processing.
 
-# Package: libkrunfw-dev
-# Section: libdevel
-# Architecture: arm64 amd64
-# Depends:
-#  libkrunfw (= ${binary:Version}),
-#  ${misc:Depends},
-# Multi-Arch: same
-# Description: libkrunfw -- development files
-#  libkrunfw is a library bundling a Linux kernel in a dynamic library in a way
-#  that can be easily consumed by libkrun.
-#  .
-#  By having the kernel bundled in a dynamic library, libkrun can leave to the
-#  linker the work of mapping the sections into the process, and then directly
-#  inject those mappings into the guest without any kind of additional work nor
-#  processing.
-#  .
-#  Development files
+Package: libkrunfw-dev
+Section: libdevel
+Architecture: arm64 amd64
+Depends:
+ libkrunfw4 (= ${binary:Version}),
+ ${misc:Depends},
+Multi-Arch: same
+Description: libkrunfw -- development files
+ libkrunfw is a library bundling a Linux kernel in a dynamic library in a way
+ that can be easily consumed by libkrun.
+ .
+ By having the kernel bundled in a dynamic library, libkrun can leave to the
+ linker the work of mapping the sections into the process, and then directly
+ inject those mappings into the guest without any kind of additional work nor
+ processing.
+ .
+ Development files
